<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DoseEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/drug_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/app_toolbar_elevation"
        android:label="@string/activity_title_drug_edit"
        android:background="@color/primary"
        android:theme="@style/PainkillerToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_main_container_margin"
        app:layout_constraintTop_toBottomOf="@+id/drug_edit_toolbar">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activity.DrugAddEditActivity">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_drug_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="false"
                app:hintAnimationEnabled="false"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_drug_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/drug_name_hint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_p24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_inner_container_margin"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/til_drug_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_dose_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doses_allowed_each_day"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_gap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_inner_container_margin"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/til_p24">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_gap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/doses_gap"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_drug_enabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/drug_edit_enable_switch"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/til_gap"/>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/default_inner_container_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_drug_enabled">

                <Button
                    android:id="@+id/btn_update_drug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:text="@string/button_text_update" />

                <Button
                    android:id="@+id/btn_delete_drug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/button_text_delete" />

                <Button
                    android:id="@+id/btn_add_drug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/button_text_add" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
